--- a/products-Listview.html
+++ b/products-Listview.html
@@ -526,7 +526,7 @@
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
                     </div>
@@ -586,7 +586,7 @@
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
 
@@ -648,7 +648,7 @@
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
 
@@ -710,7 +710,7 @@
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
 
@@ -772,7 +772,7 @@
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
 
@@ -834,7 +834,7 @@ hover:-translate-y-1 transition duration-300">
                         </p>
 
                         <!-- VIEW DETAILS -->
-                        <a href="#" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
+                        <a href="products-detail.html" class="inline-block mt-3 text-sm text-blue-600 hover:underline">
                             View details
                         </a>
 
